# TwoBit

./: .gitignore  LICENSE.md  Makefile  README.md  Roxygen  main.c  main_freq.c  twobit.R  twobit.c  twobit.h  twobit_R.c
pkg/: DESCRIPTION
pkg/R/: twobit.R
pkg/src/: Makefile  twobit.c  twobit.h  twobit_R.c
rust/: Makefile  main.rs  test.c  twobit.rs
rust_native/: Cargo.toml  Makefile  main.rs  test.rs  twobit.rs
rust_native/src/: twobit.rs
